--- a/docker-app/Dockerfile
+++ b/docker-app/Dockerfile
@@ -1,17 +1,11 @@
-FROM nginx:latest
+FROM node
 
 LABEL MAINTAINER=james
 
-CMD ["nginx", "-g", "daemon off;"]
+WORKDIR /usr/src/app
 
-FROM node:latest
-
-COPY /d/User/Jem/Python/tech_230/tech230-cicd-with-jenkins/app/ ./
-
-WORKDIR /app
-
-RUN npm install
+COPY app /usr/src/app
 
 EXPOSE 3000
 
-CMD ["npm","start"]
+CMD ["node", "app.js"]
