--- a/k8-app/db-deploy.yml
+++ b/k8-app/db-deploy.yml
@@ -4,28 +4,24 @@ kind: Deployment
 
 # Define the metadata for the Deployment, setting the name to "app-deployment".
 metadata:
-  name: app-deployment
+  name: db-deployment
 
 spec:
   # Insert a selector to match the labels of the Pods controlled by this Deployment.
   selector:
     matchLabels:
-      app: app
+      app: db
   # Specify that the Deployment should maintain three replicas of the Pods.
-  replicas: 3
+  replicas: 1
   template:
     metadata:
       # Specify the Pod template for the Deployment; set the labels for the Pods to app: app.
       labels:
-        app: app
+        app: db
     spec:
       # Define a single container named "app" with the image jemseekings/tech230-james-app:latest; also expose port 3000 for the container.
       containers:
-      - name: app
-        image: bradleywoods/node-app:v2
+      - name: db
+        image: bradleywoods/mongo-database:v2
         ports:
-        - containerPort: 3000
-        env:
-        - name: DB_HOST
-          value: "mongodb://db-svc:27017/posts"
-        imagePullPolicy: Always
+        - containerPort: 27017
